crates/walltime-core/src/snapshots/walltime_core__summary__tests__summary_nonzero_exit.snap
---
source: crates/walltime-core/src/summary.rs
expression: output
---

──────────────────────────────
  walltime summary
──────────────────────────────
  Total:      0.500s

  Exit code:  1
──────────────────────────────
