crates/walltime-core/src/snapshots/walltime_core__summary__tests__summary_simple.snap
---
source: crates/walltime-core/src/summary.rs
expression: output
---

──────────────────────────────
  walltime summary
──────────────────────────────
  Total:      2.000s

  Exit code:  0
──────────────────────────────
