crates/walltime-core/src/snapshots/walltime_core__summary__tests__summary_with_history.snap
---
source: crates/walltime-core/src/summary.rs
expression: output
---

──────────────────────────────────────────────────
  walltime summary
──────────────────────────────────────────────────
  Total:      1.800s

  Phases:
    compile  1.200s  (66.7%)
    link     0.600s  (33.3%)

  History: cargo build (last 3 runs)
  ┌─────┬──────────────┬────────┬─────────┬────────┐
  │ Run │         Date │  Total │ compile │   link │
  ├─────┼──────────────┼────────┼─────────┼────────┤
  │  #1 │ [DATE] │ 2.345s │  1.456s │ 0.544s │
  │  #2 │ [DATE] │ 1.890s │  1.200s │ 0.390s │
  │  #3 │ [DATE] │ 1.800s │  1.200s │ 0.600s │ ← current
  └─────┴──────────────┴────────┴─────────┴────────┘

  Exit code:  0
──────────────────────────────────────────────────
