crates/walltime-core/src/snapshots/walltime_core__summary__tests__summary_with_phases.snap
---
source: crates/walltime-core/src/summary.rs
expression: output
---

──────────────────────────────
  walltime summary
──────────────────────────────
  Total:      2.000s

  Phases:
    compile  1.456s  (72.8%)
    link     0.544s  (27.2%)

  Exit code:  0
──────────────────────────────
